# mbx

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/backtests/: us_kelly.yaml  us_kelly_monthly.yaml
data/samples/: cape_annual.csv  rf_annual.csv  spx_annual.csv
src/mbx/backtest/: engine.py  engine_monthly.py  metrics.py
src/mbx/cli/: main.py
src/mbx/data/: fetch_public.py
src/mbx/data/loaders/: ff_monthly.py  ken_french_rf.py  shiller_cape.py  shiller_cape_monthly.py  spx_tr.py
src/mbx/storage/: fs.py
src/mbx/strategies/: base.py
src/mbx/strategies/alloc/: merton.py
src/mbx/utils/: logging.py
