[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbx"
version = "0.1.0"
description = "Valuation-aware Kelly/Merton allocator, feature engine, and backtesting runner"
authors = [{name="You"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.4",
  "typer>=0.9.0",
  "pandas>=2.2",
  "numpy>=1.26",
  "pyarrow>=15.0.0",
  "duckdb>=1.0.0",
  "fsspec>=2024.2.0",
  "s3fs>=2024.2.0",
  "cvxpy>=1.4.2",
  "scipy>=1.11",
  "statsmodels>=0.14",
  "matplotlib>=3.8"
]

[project.scripts]
mbx = "mbx.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP"]
